# ppc-2024-mpi-reports

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
modules/example/: CMakeLists.txt
modules/example/latex/: CMakeLists.txt  test_latex.tex
modules/mpi/nasedkin_e_strassen_algorithm/: CMakeLists.txt  nasedkin_e_strassen_algorithm.tex
